[package]
name = "elemeld"
version = "0.1.0"
authors = ["Kira Bruneau <kira.bruneau@gmail.com>"]

[dependencies]
mio = "*"
serde = "*"
rustc-serialize = "*"
serde_json = "*"
bincode = "*"
serde_macros = "*"
x11-dl = "*"
dylib = "*"
libc = "*"
nix = "*"
log = "*"
env_logger = "*"
docopt = "*"
docopt_macros = "*"
