[package]
name = "elemeld"
version = "0.1.0"
authors = ["Kira Bruneau <kira.bruneau@gmail.com>"]

[dependencies]
mio = "*"
ws = "*"
serde = "*"
rustc-serialize = "*"
serde_json = "*"
bincode = "*"
serde_macros = "*"
x11-dl = { git = "https://github.com/MetaDark/x11-rs.git" }
dylib = "*"
libc = "*"
nix = "*"
log = "*"
env_logger = "*"
docopt = "*"
docopt_macros = "*"
